--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "framer-motion": "^8.5.0",
     "next": "13.1.3",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
@@ -27,6 +28,7 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.3",
     "postcss": "^8.4.18",
+    "postcss-100vh-fix": "^1.0.2",
     "tailwindcss": "^3.2.1",
     "typescript": "^4.9.4"
   }
