--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "react-lottie-player": "^1.5.0"
+    "react-lottie-player": "^1.5.0",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
@@ -27,6 +28,7 @@
     "autoprefixer": "^10.4.13",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.3",
+    "file-loader": "^6.2.0",
     "postcss": "^8.4.18",
     "postcss-100vh-fix": "^1.0.2",
     "tailwindcss": "^3.2.1",
