--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "sanity": "^3.0.0",
+    "styled-components": "^5.2.0",
+    "@sanity/vision": "^3.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@portabletext/react": "^2.0.0",
+    "@sanity/image-url": "^1.0.2",
     "framer-motion": "^8.5.0",
     "next": "13.1.3",
+    "next-sanity": "^4.1.1",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -23,6 +29,7 @@
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
+    "@sanity/eslint-config-studio": "^2.0.1",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "autoprefixer": "^10.4.13",
