--- a/package.json
+++ b/package.json
@@ -9,23 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "sanity": "^3.0.0",
-    "styled-components": "^5.2.0",
-    "@sanity/vision": "^3.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@portabletext/react": "^2.0.0",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.0.0",
     "framer-motion": "^8.5.0",
     "next": "13.1.3",
     "next-sanity": "^4.1.1",
+    "next-sanity-image": "^5.0.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-lottie-player": "^1.5.0",
+    "sanity": "^3.0.0",
+    "styled-components": "^5.2.0",
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
