--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@portabletext/react": "^2.0.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.0.0",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "framer-motion": "^8.5.0",
     "next": "13.1.3",
     "next-sanity": "^4.1.1",
