--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^4.7.1",
     "react-lottie-player": "^1.5.0",
     "sanity": "^3.0.0",
+    "sanity-plugin-vercel-deploy": "^3.3.3",
     "styled-components": "^5.2.0",
     "use-sound": "^4.0.1"
   },
