--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "next": "13.1.3",
     "next-sanity": "^4.1.1",
     "next-sanity-image": "^5.0.0",
-    "next-themes": "^0.2.1",
+    "next-themes": "npm:@wits/next-themes",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
