--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.0.0",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@types/refractor": "^3.0.2",
     "axios": "^1.2.6",
     "framer-motion": "^8.5.0",
-    "highlight.js": "^11.7.0",
     "next": "13.1.3",
     "next-sanity": "^4.1.1",
     "next-sanity-image": "^5.0.0",
@@ -30,6 +30,8 @@
     "react-icons": "^4.7.1",
     "react-lottie-player": "^1.5.0",
     "react-lowlight": "^3.0.0",
+    "react-refractor": "^2.1.7",
+    "react-syntax-highlighter": "^15.5.0",
     "sanity": "^3.0.0",
     "sanity-plugin-iframe-pane": "^1.1.5",
     "sanity-plugin-vercel-deploy": "^3.3.3",
