--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.0.0",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@types/react-syntax-highlighter": "^15.5.6",
     "@types/refractor": "^3.0.2",
     "axios": "^1.2.6",
+    "babel-plugin-prismjs": "^2.1.0",
     "framer-motion": "^8.5.0",
     "next": "13.1.3",
     "next-sanity": "^4.1.1",
