--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "@types/react-syntax-highlighter": "^15.5.6",
     "@types/refractor": "^3.0.2",
+    "@wits/next-themes": "^0.2.16",
     "axios": "^1.2.6",
     "babel-plugin-prismjs": "^2.1.0",
     "framer-motion": "^8.5.0",
     "next": "13.1.3",
     "next-sanity": "^4.1.1",
     "next-sanity-image": "^5.0.0",
-    "next-themes": "npm:@wits/next-themes",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
