--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codesandbox/sandpack-react": "^1.20.8",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
@@ -23,10 +24,12 @@
     "@wits/next-themes": "^0.2.16",
     "axios": "^1.2.6",
     "babel-plugin-prismjs": "^2.1.0",
+    "babel-preset-env": "^1.7.0",
     "framer-motion": "^8.5.0",
     "next": "13.1.3",
     "next-sanity": "^4.1.1",
     "next-sanity-image": "^5.0.0",
+    "next-themes": "^0.2.1",
     "nextjs-google-analytics": "^2.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
