--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-plugin-prismjs": "^2.1.0",
     "babel-preset-env": "^1.7.0",
     "framer-motion": "^8.5.0",
+    "get-youtube-id": "^1.0.1",
     "next": "13.1.3",
     "next-sanity": "^4.1.1",
     "next-sanity-image": "^5.0.0",
@@ -34,6 +35,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-lite-youtube-embed": "^2.3.52",
     "sanity": "^3.0.0",
     "sanity-plugin-iframe-pane": "^1.1.5",
     "sanity-plugin-vercel-deploy": "^3.3.3",
