--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@codesandbox/sandpack-react": "^1.20.8",
@@ -43,12 +44,16 @@
   },
   "devDependencies": {
     "@sanity/eslint-config-studio": "^2.0.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "autoprefixer": "^10.4.13",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.3",
     "file-loader": "^6.2.0",
+    "jest": "^29.4.2",
+    "jest-environment-jsdom": "^29.4.2",
     "postcss": "^8.4.18",
     "postcss-100vh-fix": "^1.0.2",
     "tailwindcss": "^3.2.1",
