--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "@codesandbox/sandpack-react": "^1.20.8",
@@ -27,6 +28,7 @@
     "babel-preset-env": "^1.7.0",
     "framer-motion": "^8.5.0",
     "get-youtube-id": "^1.0.1",
+    "msw": "^1.0.1",
     "next": "13.1.3",
     "next-sanity": "^4.1.1",
     "next-sanity-image": "^5.0.0",
@@ -43,6 +45,8 @@
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
     "@sanity/eslint-config-studio": "^2.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -52,11 +56,13 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.3",
     "file-loader": "^6.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.4.2",
     "jest-environment-jsdom": "^29.4.2",
     "postcss": "^8.4.18",
     "postcss-100vh-fix": "^1.0.2",
     "tailwindcss": "^3.2.1",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.9.4"
   }
 }
