--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest --watch",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "@codesandbox/sandpack-react": "^1.20.8",
@@ -53,6 +54,7 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "autoprefixer": "^10.4.13",
+    "cypress": "^12.5.1",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.3",
     "file-loader": "^6.2.0",
