--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -30,13 +30,13 @@
     "framer-motion": "^8.5.0",
     "get-youtube-id": "^1.0.1",
     "msw": "^1.0.1",
-    "next": "13.1.3",
+    "next": "15.5.4",
     "next-sanity": "^4.1.1",
     "next-sanity-image": "^5.0.0",
     "next-themes": "^0.2.1",
     "nextjs-google-analytics": "^2.3.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "react-icons": "^4.7.1",
     "react-lite-youtube-embed": "^2.3.52",
     "sanity": "^3.0.0",
@@ -52,11 +52,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/node": "^18.11.18",
-    "@types/react": "^18.0.27",
+    "@types/react": "19.1.13",
     "autoprefixer": "^10.4.13",
     "cypress": "^12.5.1",
     "eslint": "8.32.0",
-    "eslint-config-next": "13.1.3",
+    "eslint-config-next": "15.5.4",
     "file-loader": "^6.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.4.2",
@@ -66,5 +66,8 @@
     "tailwindcss": "^3.2.1",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.4"
+  },
+  "resolutions": {
+    "@types/react": "19.1.13"
   }
 }
